--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,11 @@
 }
 
 body {
-  background-color: var(--baseColor);
+  width: 100%;
+  height: 100vh;
+  background: url("https://static.vecteezy.com/ti/fotos-gratis/p1/1227303-textura-de-papel-amassado-preto-gr%C3%A1tis-foto.jpg")
+    no-repeat;
+  background-size: cover;
 }
 
 /*==========VARIABLES==========*/
@@ -51,6 +55,19 @@ body {
   max-width: 100%;
 }
 
+.links-profile {
+  display: flex;
+}
+
+.icons i {
+  color: white;
+  margin: .5rem; 
+}
+
+.icons .active i {
+  width: 50px;
+}
+
 /*==========LINKS==========*/
 
 .links {
@@ -65,20 +82,23 @@ body {
   text-decoration: none;
   color: var(--baseColor);
   background-color: var(--fontColor);
-  border: 0.125rem solid var(--fontColor);
-  width: 100%;
+  filter: drop-shadow(0.3rem 0.5rem var(--baseColor));
+  width: 90%;
+  height: 3rem;
+  border-radius: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1rem 1.25rem;
   font-weight: 700;
-  margin-bottom: 1rem;
-  transition: background-color 0.25s;
+  margin-bottom: 1.5rem;
+  transition: background-color 0.25s ease;
+  transition: filter 0.25s ease;
 }
 
 .links a:hover {
-  border: 2px solid var(--fontColor);
   background-color: var(--baseColor);
+  filter: drop-shadow(0.3rem 0.5rem #cecece);
   color: var(--fontColor);
 }
 
@@ -89,6 +109,5 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 2rem 1rem 2rem 1rem;
   }
 }
